5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1590_825.log
== SUBMITION (2019-04-08 13:39:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1=var2=var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.171049
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 7
    s=(var1=var2=var3)/2
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:39:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1=var2=var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.125779
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 7
    s=(var1=var2=var3)/2
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:39:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1=var2=var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- ERROR:
File "XXXX", line 7
    s=(var1=var2=var3)/2
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:39:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1=var2=var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.133453
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 7
    s=(var1=var2=var3)/2
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:39:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1=var2=var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- ERROR:
File "XXXX", line 7
    s=(var1=var2=var3)/2
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:39:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1=var2=var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.225178
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 7
    s=(var1=var2=var3)/2
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:40:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
	  
-- EXECUTION TIME:
0.190458
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 12
    
       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:40:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
	  
-- EXECUTION TIME:
0.192261
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 12
    
       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:40:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
	  
-- EXECUTION TIME:
0.14434
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 12
    
       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:40:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
	  
-- EXECUTION TIME:
0.186934
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 12
    
       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:45:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input("valor do raio= "))
from math import*
a=x**2*pi
v=pi*(x**3)*4/3
print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME:
0.155915
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
